--- a/mg_assembler/mg_assembler/mg_assembler.vcxproj
+++ b/mg_assembler/mg_assembler/mg_assembler.vcxproj
@@ -20,14 +20,25 @@
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="..\..\src\entry.cpp" />
+    <ClCompile Include="..\..\src\env.cpp" />
+    <ClCompile Include="..\..\src\format_chk.cpp" />
+    <ClCompile Include="..\..\src\interpret.cpp" />
+    <ClCompile Include="..\..\src\microgame.cpp" />
+    <ClCompile Include="..\..\src\mtsstream.cpp" />
+    <ClCompile Include="..\..\src\primitives.cpp" />
     <ClCompile Include="..\..\src\shell.cpp" />
+    <ClCompile Include="..\..\src\syms_table.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="..\..\src\aliases.h" />
     <ClInclude Include="..\..\src\env.h" />
+    <ClInclude Include="..\..\src\format_chk.h" />
+    <ClInclude Include="..\..\src\microgame.h" />
+    <ClInclude Include="..\..\src\mtsstream.h" />
     <ClInclude Include="..\..\src\mt_exception.h" />
     <ClInclude Include="..\..\src\primitives.h" />
     <ClInclude Include="..\..\src\shell.h" />
+    <ClInclude Include="..\..\src\syms_table.h" />
   </ItemGroup>
   <PropertyGroup Label="Globals">
     <ProjectGuid>{EC9D5C32-EF00-4492-8D2D-A08175C6818F}</ProjectGuid>
@@ -85,6 +96,7 @@
       <WarningLevel>Level3</WarningLevel>
       <Optimization>Disabled</Optimization>
       <SDLCheck>true</SDLCheck>
+      <PreprocessorDefinitions>_CRT_SECURE_NO_WARNINGS;%(PreprocessorDefinitions)</PreprocessorDefinitions>
     </ClCompile>
   </ItemDefinitionGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">
